Bug 102047 - Memory leak when stream stops
Summary: Memory leak when stream stops
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.3-CVS
Platform: Mandrake RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 102049 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-03-21 05:42 UTC by Greg Meyer
Modified: 2006-06-11 12:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Greg Meyer 2005-03-21 05:42:59 UTC
Version:            (using KDE KDE 3.3.2)
Installed from:    Mandrake RPMs
Compiler:          GCC 3.4.3 
OS:                Linux

While listening to my last.fm stream, if I stop the stream by clicking on the stop link on the last.fm website, amaroK gobbles up all available memory and crashes the system within a few seconds.

I can't tell if this is an issue with all streams or just last.fm, since most other streams don't just stop in the middle, but since I can control the last.fm stream, I can recreate it.

If you stop amaroK from playing before the stream is stopped, this behavior is not displayed.  I was also using the gst-engine and cannot test with xine because last.fm is not playing with xine tonight.
Comment 1 Leo Franchi 2005-03-21 05:47:34 UTC
i can confirm. basically, if the stream is stopped, it starts munching ram at the speed of about 5 mb. tasty :)
Comment 2 Ian Monroe 2005-03-21 08:13:25 UTC
*** Bug 102049 has been marked as a duplicate of this bug. ***
Comment 3 Philippe Cloutier 2005-03-23 04:00:44 UTC
This has been reported in the Debian BTS on 2005-03-17 at http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=299931
The version hasn't been precised, but it is inferior to 1.2.2. In any case, if there are no other problems, this will be keeping Amarok 1.2 from Debian Sarge starting from 2005-03-27, since the bug is grave.
Comment 4 Philippe Cloutier 2005-03-23 04:02:43 UTC
Oops...I should have checked the pre-last comment more carefully before sending the last one.
Comment 5 Mark Kretschmann 2005-03-23 12:52:27 UTC
CVS commit by markey: 

FIX: Leaked memory when radio stream stalled.

BUG: 102047
CCMAIL: amarok-devel@lists.sf.net


  M +2 -1      ChangeLog   1.583
  M +5 -5      src/engine/gst/gstengine.cpp   1.248
  M +47 -46    src/engine/gst/streamsrc.cpp   1.25
  M +7 -2      src/engine/gst/streamsrc.h   1.14
  M +7 -7      src/engine/gst/equalizer/gstequalizer.cpp   1.18
  M +7 -12     src/engine/gst/equalizer/gstequalizer.h   1.9
Comment 6 Mark Kretschmann 2005-03-23 14:21:15 UTC
I'd also like to point out that in my extensive testing this morning the leak was nowhere as big as depicted here. It was more like 1MB in 5 minutes. I would hardly call that critical, considering the situation was rather rare anyway.
Comment 7 Greg Meyer 2005-03-23 14:46:41 UTC
Well, that's great that it wasn't so bad for you, but in my case, my machine became unusable in less than a minute because I didn't realize what was happening, and once I realized it, I didn't have time to kill amarokapp before the machine totally crashed.  So what caused it to have a less drastic effect for you, maybe the combinatoin of ram (512MB) plus swap (384 MB). I don't know, but that tha doesn't necessary mean it wasn't serious.  AFAIAC, any bug that crashes my machine is critical.
Comment 8 Leo Franchi 2005-03-23 16:42:16 UTC
I'll have to go with Greh here, because had I not known about this bug, in 
about two minutes all of my 1 gb of ram and 512 mb of swap would have been 
gone and my machine rendered unusable.

On Wednesday 23 March 2005 05:46 am, Greg Meyer wrote:
[bugs.kde.org quoted mail]
Comment 9 Christian Henz 2005-03-23 19:38:35 UTC
Well, this bug rendered my Machine unusable for 15 Minutes and took down my complete KDE Session. Seemed pretty critical to me.

cheers,
Christian
Comment 10 WiLLiE 2005-09-01 03:48:39 UTC
Is this bug really fixed?
It happens to me with both v1.3b3 and v1.3, compiled from source on ubuntu.
It always happens when I change stream (di.fm) and it takes around 3-4mins, my 1gb of mem and swap is gone and my machine is stalled.
Comment 11 Greg Meyer 2005-09-02 04:46:01 UTC
Well, the bug as originally reported is fixed.  You may have found a different 
scenario that causes a leak.  Probably ought to open a new bug rather than 
re-open an old bug.