FIX: Leaked memory when radio stream stalled.

BUG: 102047
CCMAIL: amarok-devel@lists.sf.net

svn path=/trunk/kdeextragear-1/amarok/; revision=399963